# WebODM

./: .babelrc  .dockerignore  .env  .env.example  .env.secret.example  .gitignore  .gitmodules  .travis.yml  AGENTS.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Contributors.md  Dockerfile  Dockerfile_Base  HOSTED.md  I10n.toml  ISSUE_TEMPLATE.md  LICENSE.md  LOCALES  README.md  README_koki.md  SECURITY.md  TRADEMARK.md  build-react.sh  celerybeat-schedule.db  config.yml  detect_gpus.sh  dev-worker.sh  devenv.sh  docker-compose-default.yml  docker-compose.build.yml  docker-compose.db_14.yml  docker-compose.dev.yml  docker-compose.ipv6.yml  docker-compose.nodemicmac.yml  docker-compose.nodeodm.gpu.intel.yml  docker-compose.nodeodm.gpu.nvidia.yml  docker-compose.nodeodm.volume.yml  docker-compose.nodeodm.yml  (+30 more)
.github/: FUNDING.yml
app/: .gitignore  __init__.py  admin.py  apps.py  auth0backend.py  background.py  boot.py  cogeo.py  fields.py  formCustom.py  geoutils.py  imageutils.py  models.py  oidc_providers.py  pending_actions.py  permissions.py  pointcloud_utils.py  postgis.py  raster_utils.py  scheduler.py  security.py  signals.py  tests.py  testwatch.py  uploadhandler.py  urls.py  video.py  views.py
contrib/: Hard_Recovery_Guide.md  iterate_DTM.ipynb  ubuntu_1604_install.sh
db/: Dockerfile  docker-entrypoint.sh  init.sql
desktop-app/: README.md  docker-compose.yml  package.json  tsconfig.json  webpack.main.config.js  webpack.renderer.config.js
docs/: CNAME  README.md  astro.config.mjs  package-lock.json
dpkg/: README.md  build.sh  install.sh  webodm_1.9.3-1.deb
javascripts/: all.js  all_nosearch.js
locale/: django.pot  djangojs.pot
locane/: .gitignore  index.html  package.json  vite.config.js
nginx/: .gitignore  crontab  letsencrypt-autogen.sh  logrotate-nginx  nginx-ssl.conf.template  nginx.conf  nginx.conf.template
nodeodm/: __init__.py  admin.py  api_client.py  apps.py  cleanup.sh  exceptions.py  models.py  setup.sh  status_codes.py  tests.py
override/: override.py  override_lib.py  shpjs.change
plugins/: .gitignore
service/: webodm-celery.service  webodm-celerybeat.service  webodm-docker.service  webodm-gunicorn.service  webodm-nginx.service
slate/: .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  Gemfile  README.md  Vagrantfile  config.rb  deploy.sh  run_server.bat
webodm/: settings.py  (+4 more)
(+1074 files in other folders)
